se ve una página

--- a/PetProject++/src/main/resources/templates/formularioUsuario.hbs
+++ b/PetProject++/src/main/resources/templates/formularioUsuario.hbs
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/formularioUsuario.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/formularioUsuario.css">
     <script src="js/formularioUsuario.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
@@ -23,7 +23,7 @@
         <!--========================================================== -->
         <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
             <a class="navbar-brand" rel="home" href="#">
-                <img style="max-width:100px;" src="./img/Logo/negro2.png">
+                <img style="max-width:100px;" src="/img/Logo/negro2.png">
             </a>
             <div class="container">
                 <a class="navbar-brand" href="./index.html">
