--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -10,8 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="formularioUsuario.css">
-    <script src="js/mascota-perdida.js "></script>
+    <link rel="stylesheet" href="./css/formularioUsuario.css">
+    <script src="./css/js/mascota-perdida.js "></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -42,10 +42,11 @@
         </div>
     </nav>
     </header>
+    <div class="volver">
+        <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
+    </div>
     <main class="container">
-        <div class="volver">
-            <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
-        </div>
+
         <h1>Mascota Perdida</h1>
         <div class="row mt-4">
             <div class="col-12">
@@ -76,10 +77,6 @@
                     <div class="row border-top border-secondary">
 
                         <div class="col-12 ">
-                            <label for=" " class="form-label mt-4"> Nombre</label>
-                            <input type="text " class="form-control ">
-                            <label for=" " class="form-label "> Apellido</label>
-                            <input type="text " class="form-control ">
                             <label for="exampleFormControlInput1 " class="form-label ">Email </label>
                             <input type="email " class="form-control " id="exampleFormControlInput1 " placeholder="nombre@ejemplo.com ">
                             <label for=" " class="form-label "> Telefono</label>
@@ -101,8 +98,17 @@
                     </div>
                     <h3 class="mt-4">Datos de la Mascota</h3>
                     <div class="row border-top border-secondary">
-
                         <div class="col-12 ">
+                            <div class="row">
+                                <div class="col-3">
+                                    <label for="" class="form-label ">Especie</label>
+                                    <select class="form-select">
+                                        <option value="PERRO">Perro</option>
+                                        <option value="GATO">Gato</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <br>
                             <div class="row">
                                 <div class="col-9">
                                     <label for="" class="form-label">Agregar Imagen</label>
@@ -113,9 +119,79 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
+                            <br>
+                            <div class="row">
+                                <label for="" class="form-label">Sexo</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Hembra" checked>
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                      Hembra
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Macho">
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                      Macho
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Desconoce" >
+                                    <label class="form-check-label" for="flexRadioDefault2">
+                                      Desconoce
+                                    </label>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <label for="" class="form-label">Caracteristicas</label>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Tranquilo
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Pacifico
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Manso
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Delgado
+                                    </label>
+                                </div>
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                      Amistoso
+                                    </label>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row">
+                                <h3>Caracteristicas especificas</h3>
+                                <label for="" class="form-label">Raza</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Color Principal</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Color Secundario</label>
+                                <input type="text" class="form-control">
+                                <label for="" class="form-label">Patrondistintivo</label>
+                                <input type="text" class="form-control">
 
+                            </div>
+                            <br>
                             <label for=" " class="form-label "> Descripcion de la mascota</label>
                             <textarea name="" id="" class="form-control"></textarea>
+                            <br>
                             <label for="exampleFormControlInput1 " class="form-label ">Direccion donde se encontro</label>
                             <input type="text " class="form-control ">
                             <div class="row mt-5">
