empiezo con los controlles del handlebars

--- a/PetProject++/src/main/resources/css/inicio.css
+++ b/PetProject++/src/main/resources/css/inicio.css
@@ -1,9 +1,9 @@
 .prueba {
-    background: url(img/1.png);
+    background: url(../img/1.png);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 800px;
+    height: 500px;
 }
 
 .inicio {
