--- a/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/pantallaAdmin.css">
     <link rel="stylesheet" href="./css/registrarMascota.css">
-    <script src="./css/js/formulario-quiero-adoptar.js"></script>
+    <script src="js/formulario-quiero-adoptar.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
