--- a/PetProject++/src/main/resources/templates/editor_de_formularios.hbs
+++ b/PetProject++/src/main/resources/templates/editor_de_formularios.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/formularioUsuario.css">
-    <script src="./css/js/formularioUsuario.js"></script>
+    <script src="js/formularioUsuario.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
