--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
-    <script src="./css/js/mascotas-encontradas.js"></script>
+    <script src="js/mascotas-encontradas.js"></script>
     <title>Diseño de sistemas</title>
   </head>
   <body>
