--- a/PetProject++/src/main/resources/templates/signUp.hbs
+++ b/PetProject++/src/main/resources/templates/signUp.hbs
@@ -41,7 +41,7 @@
                 <input type="password" class="form-control" placeholder="ingrese contraseña">
                 <label for="">Recuerdame</label>
                 <input type="checkbox">
-                <input type="button" value="Login"  onclick="login(this)" class="boton">
+                <input type="button" value="Sign-Up"  onclick="login(this)" class="boton">
                 <input type="button"  value="Registrarse"  onclick="registrarse(this)" class="boton">
                 <a href=" ">
                         olvide mi contraseña
