--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -17,12 +17,12 @@
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
   <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-    <a class="navbar-brand" rel="home" href="#">
+    <a class="navbar-brand" rel="home" href="/Inicio">
       <img style="max-width:100px;"
           src="./img/Logo/negro2.png">
     </a>
     <div class="container">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="/Inicio">
           <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
             <a class="nav-link" href="#seccion-contacto">Sistema</a>
           </li>
         </ul>
-        <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+        <a href="/Perfil"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
     </div>
   </nav>
@@ -333,9 +333,9 @@
 
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
   <div id="iconos" >
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>  
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-twitter"></i></a>
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-instagram"></i></a>
   </div>
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
