--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/formularioUsuario.css">
-    <script src="js/mascota-perdida.js "></script>
+    <script src="../js/mascota-perdida.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -50,7 +50,7 @@
         <h1>Mascota Perdida</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../forms/mascotaPerdida" method="post">
+                <form action="../forms/mascotaPerdida" method="post" id='form'>
                     <div class="row">
                         <div class="col-6">
                             <label for="nombre" class="form-label "> Nombre</label>
@@ -81,7 +81,7 @@
                                         <label for="calle" class="form-label">Calle</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control" name="direccion.calle">
+                                        <input type="text" class="form-control" name="direccion.calle" id='inpuDireccion'>
                                     </div>
 
                                 </div>
@@ -176,7 +176,7 @@
                                         </label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="text" class="form-control" name="contacto.celular">
+                                        <input type="text" class="form-control" name="contacto.celular" id='telefono'>
                                     </div>
                                 </div>
 
@@ -191,7 +191,7 @@
                                         </label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="text" class="form-control" placeholder="Ejemplo@gmail.com" name="contacto.mail">
+                                        <input type="text" class="form-control" placeholder="Ejemplo@gmail.com" name="contacto.mail" id="email">
                                     </div>
                                 </div>
 
@@ -254,9 +254,13 @@
                             </div>
                             <br>
                             <div class="row">
+                                <div class="col-12">
                                 <h3>Caracteristicas especificas</h3>
+                                
                                 {{#each caracteristicas}}
-                                    <label for="" class="form-label">{{descripcion}}</label>
+                                    <div class="row">
+                                        <div class="col-6">
+                                        <label for="" class="form-label">{{descripcion}}</label>
                                     {{#if opciones}}
                                         <select class="form-select" name="{{descripcion}}">
                                             <option value="">Desconoce</option>
@@ -267,7 +271,12 @@
                                     {{else}}
                                         <input type="text" class="form-control" name="{{descripcion}}">
                                     {{/if}}
+                                        </div>
+                                    </div>
+                                   
                                 {{/each}}
+                                </div>
+                                
                             </div>
                             <br>
                             <label for="descripcion" class="form-label "> Descripcion de la mascota</label>
@@ -284,7 +293,7 @@
                             <div class="row mt-6">
                                 <div class="col-12 d-flex justify-content-center">
                                     <div>
-                                        <button type="submit" class="col-12 btn btn-secondary mb-3 mt-5" onclick="enviar()" style="background-color: blueviolet;">Enviar</button>
+                                        <button class="col-12 btn btn-secondary mb-3 mt-5" onclick='enviar()' style="background-color: blueviolet;">Enviar</button>
                                     </div>
                                 </div>
                             </div>
