--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -21,11 +21,11 @@
     <!-- ENCABEZADO -->
     <!--========================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-        <a class="navbar-brand" rel="home" href="#">
+        <a class="navbar-brand" rel="home" href="../Inicio">
             <img style="max-width:100px;" src="./img/Logo/negro2.png">
         </a>
         <div class="container">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../Inicio">
                 <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#seccion-contacto">Sistema</a>
+                        <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Inicio#intro">Sistema</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
                     </li>
                 </ul>
                 <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
@@ -43,7 +49,7 @@
     </nav>
     </header>
     <div class="volver">
-        <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
+        <a href="../Mascotas-Encontradas" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
     </div>
     <main class="container">
 
@@ -259,18 +265,20 @@
                                 
                                 {{#each caracteristicas}}
                                     <div class="row">
-                                        <div class="col-6">
-                                        <label for="" class="form-label">{{descripcion}}</label>
-                                    {{#if opciones}}
-                                        <select class="form-select" name="{{descripcion}}">
-                                            <option value="">Desconoce</option>
-                                        {{#each opciones}}
-                                            <option value="{{valor}}">{{valor}}</option>
-                                        {{/each}}
-                                        </select>
-                                    {{else}}
-                                        <input type="text" class="form-control" name="{{descripcion}}">
-                                    {{/if}}
+                                        <div class="col-4">
+                                            <label for="" class="form-label">{{descripcion}}</label>
+                                        </div>
+                                        <div class="col-7">
+                                            {{#if opciones}}
+                                                <select class="form-select form-select-seguido" name="{{descripcion}}">
+                                                    <option value="">Desconoce</option>
+                                                {{#each opciones}}
+                                                    <option value="{{valor}}">{{valor}}</option>
+                                                {{/each}}
+                                                </select>
+                                            {{else}}
+                                                <input type="text" class="form-control" name="{{descripcion}}">
+                                            {{/if}}
                                         </div>
                                     </div>
                                    
@@ -293,7 +301,7 @@
                             <div class="row mt-6">
                                 <div class="col-12 d-flex justify-content-center">
                                     <div>
-                                        <button class="col-12 btn btn-secondary mb-3 mt-5" onclick='enviar()' style="background-color: blueviolet;">Enviar</button>
+                                        <button type="button" class="col-12 btn btn-secondary mb-3 mt-5" onclick='enviar()' style="background-color: blueviolet;">Enviar</button>
                                     </div>
                                 </div>
                             </div>
