--- a/PetProject++/src/main/resources/css/formularioUsuario.css
+++ b/PetProject++/src/main/resources/css/formularioUsuario.css
@@ -138,7 +138,7 @@ form input {
     font-family: Arial, Helvetica, sans-serif
 }
 .contenedor-de-movimiento{
-    margin-left: 10;
+    margin-left: 10px;
     width: 20px;
     display:grid;
     align-content: space-around;
@@ -160,9 +160,9 @@ form input {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100;
-    height: 50;
-    padding-top: 12;
+    width: 100px;
+    height: 50px;
+    padding-top: 12px;
     margin-left: 10px;
     background-color: #D2D2D2;
 }
@@ -195,7 +195,7 @@ form input {
     border-top: 1px solid rgba(0, 0, 0, 0.6);
     border-bottom: 1px solid rgba(0, 0, 0, 0.6);
     border-left: 1px solid rgba(0, 0, 0, 0.6);
-    border-right: opx;
+    border-right: 0px;
     margin-right: 0px;
     width: 500px;
     height: 50px;
@@ -280,7 +280,7 @@ form input {
     color:#3EC1E8;
 }
 .preguntas {
-    border: 1px solid rgba(0, 0, 0);
+    border: 1px solid rgba(0, 0, 0, 0.6);
     height: 300px;
     border-radius: 15px;
     overflow: hidden;
