--- a/PetProject++/src/main/resources/templates/hogares-transito.hbs
+++ b/PetProject++/src/main/resources/templates/hogares-transito.hbs
@@ -17,12 +17,12 @@
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
   <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-    <a class="navbar-brand" rel="home" href="#">
+    <a class="navbar-brand" rel="home" href="../Inicio">
       <img style="max-width:100px;"
           src="./img/Logo/negro2.png">
     </a>
     <div class="container">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../Inicio">
           <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,9 +30,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Sistema</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Inicio#intro">Sistema</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
+            </li>
         </ul>
         <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
@@ -54,25 +60,32 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
+        {{#each hogares}}
         <div class="card">
-            <h5 class="card-header">Nombre</h5>
+            <h5 class="card-header">{{nombre}}</h5>
             <div class="card-body">
             <div class="row">
                 <div class="col"><h5 class="card-title">Direccion:</h5></div>
                 <div class="col"><h5 class="card-title">Admisiones:</h5></div>
                 <div class="col"><h5 class="card-title">Telefono:</h5></div>
-                <div class="col"><h5 class="card-title">Tiene Patio:</h5></div>
-                <div class="col"><h5 class="card-title">Lugar Disponible:</h5></div>
+                <div class="col"><h5 class="card-title">Patio Disponible:</h5></div>
+                <div class="col"><h5 class="card-title">Lugares Disponibles:</h5></div>
             </div>
             <div class="row">
-                <div class="col">calle falsa 123 - localidad - algo mas</div>
-                <div class="col">descripcion: admisiones</div>
-                <div class="col">descripcion: telefono</div>
-                <div class="col">descripcion:tiene patio</div>
-                <div class="col">descripcion: lugar disponible</div>
+                <div class="col">{{ubicacion.direccion}}</div>
+                <div class="col">{{#if admisiones.perros}}Perros{{#if admisiones.gatos}} - {{/if}}{{/if}}{{#if admisiones.gatos}}Gatos{{/if}}</div>
+                <div class="col">{{telefono}}</div>
+                {{#if patio}}
+                    <div class="col">Si</div>
+                {{else}}
+                    <div class="col">No</div>
+                {{/if}}
+                <div class="col">{{lugares_disponibles}}</div>
             </div>
             </div>
         </div>
+            <br>
+        {{/each}}
     </div>
   </div>
 </div>
