--- a/PetProject++/src/main/resources/templates/inicio.hbs
+++ b/PetProject++/src/main/resources/templates/inicio.hbs
@@ -122,7 +122,7 @@
     
     <div class="row w-75 mx-auto mb-5" id="servicios-fila-2">       
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start  my-5 icono-wrap">
-          <a href="mascota.html">
+          <a href="../Hogares-Transito">
             <img src="./img/transito.jpg" alt="transito" width="180" height="160">
           </a>
 
@@ -133,7 +133,7 @@
         </div>
 
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-start my-5 icono-wrap">
-          <a href="mascotas-encontradas.html">
+          <a href="../Mascotas-Encontradas">
             <img src="./img/encontrada.jpg" alt="seo" width="180" height="160" >
           </a>
 
