--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -30,9 +30,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Sistema</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Mascotas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Inicio#intro">Sistema</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
+            </li>
         </ul>
         <a href="/Perfil"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
