Cambio algunos .hbs

--- a/PetProject++/src/main/resources/templates/inicio.hbs
+++ b/PetProject++/src/main/resources/templates/inicio.hbs
@@ -205,9 +205,9 @@
 
 <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
   <div id="iconos" >
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>  
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-twitter"></i></a>
+      <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-instagram"></i></a>
   </div>
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
