--- a/PetProject++/src/main/resources/templates/formularioUsuario.hbs
+++ b/PetProject++/src/main/resources/templates/formularioUsuario.hbs
@@ -128,8 +128,9 @@
                     </div>
                 </div>
 
-                <h3 class="mt-3">Detalles de contacto</h3>
-                <div class="row mt-3">
+
+                <div class="row border-top border-secondary">
+                    <h3 class="mt-3">Detalles de contacto</h3>
                     <div class="col-6">
 
                         <div class="row">
@@ -280,8 +281,15 @@
         </div>
     </div>
 
-
+    <br>
 </main>
+<footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
+    <div id="iconos" >
+        <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-instagram"></i></a>
+    </div>
+</footer>
 <script src="js/bootstrap.bundle.min.js "></script>
 </body>
 
