--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -56,7 +56,8 @@
         <h1>Mascota Perdida</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../forms/mascotaPerdida" method="post" id='form'>
+                <form action="../forms/mascotaPerdida" method="post" class="border-top border-2 border-dark" id='form'>
+                    <h3 class="mt-4">Datos de Personales</h3>
                     <div class="row">
                         <div class="col-6">
                             <label for="nombre" class="form-label "> Nombre</label>
@@ -77,8 +78,8 @@
                             <input type="text" class="form-control" name="nroDocumento" id="nroDocumento">
                         </div>
                     </div>
-                    <h3 class="mt-4">Datos de Contacto</h3>
                     <div class="row border-top border-secondary">
+                        <h3 class="mt-4">Datos de Contacto</h3>
                         <div class="row mt-3">
                             <div class="col-6">
 
@@ -204,20 +205,20 @@
                             </div>
                         </div>
                     </div>
-                    <h3 class="mt-4">Datos de la Mascota</h3>
                     <div class="row border-top border-secondary">
+                        <h3 class="mt-4">Datos de la Mascota</h3>
                         <div class="col-12 ">
                             <div class="row">
-                                <div class="col-4">
-                                    <label for="" class="form-label ">Especie</label>
-                                    <select class="form-select" name="especie">
+                                <div class="col-6">
+                                    <label for="especie" class="form-label ">Especie</label>
+                                    <select class="form-select" name="especie" id="especie">
                                         <option value="PERRO">Perro</option>
                                         <option value="GATO">Gato</option>
                                     </select>
                                 </div>
-                                <div class="col-4">
-                                    <label for="" class="form-label ">Sexo</label>
-                                    <select class="form-select" name="sexo">
+                                <div class="col-6">
+                                    <label for="sexo" class="form-label ">Sexo</label>
+                                    <select class="form-select" name="sexo" id="sexo">
                                         <option value="null">Desconoce</option>
                                         <option value="MACHO">Macho</option>
                                         <option value="HEMBRA">Hembra</option>
@@ -239,7 +240,7 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                    <label for="" class="form-label">Caracteristicas</label>
+                                    <label for="" class="form-label">Personalidad</label>
                                     <ul style="list-style: none">
                                         <li><input class="form-check-input" type="checkbox" value="Tranquilo" name="Tranquilo" id="Tranquilo">
                                             <label class="form-check-label" for="Tranquilo">Tranquilo</label></li>
@@ -259,10 +260,9 @@
                                 </div>
                             </div>
                             <br>
-                            <div class="row">
+                            <div class="row border-top border-secondary">
+                                <h3 class="mt-4">Caracteristicas especificas</h3>
                                 <div class="col-12">
-                                <h3>Caracteristicas especificas</h3>
-                                
                                 {{#each caracteristicas}}
                                     <div class="row">
                                         <div class="col-4">
@@ -310,7 +310,15 @@
                 </form>
             </div>
         </div>
+        <br>
     </main>
+    <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
+        <div id="iconos" >
+            <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https://www.instagram.com/adopterosargentina/?hl=es-la" target="_blank"><i class="bi bi-instagram"></i></a>
+        </div>
+    </footer>
     <script src="/js/bootstrap.bundle.min.js "></script>
 </body>
 
