--- a/PetProject++/src/main/resources/templates/formularioUsuario.hbs
+++ b/PetProject++/src/main/resources/templates/formularioUsuario.hbs
@@ -63,7 +63,7 @@
                         <label for="Nombre" class="form-label">Nombre*</label>
                     </div>
                     <div class="col-6">
-                        <input type="text" class="form-control" name="user.nombre">
+                        <input type="text" class="form-control" name="nombre">
                     </div>
                 </div>
                 <div class="row mb-4">
@@ -71,7 +71,7 @@
                         <label for="apellido" class="form-label">Apellido*</label>
                     </div>
                     <div class="col-6">
-                        <input type="text" class="form-control" name="user.apellido">
+                        <input type="text" class="form-control" name="apellido">
                     </div>
                 </div>
                 <div class="row mb-4">
@@ -81,14 +81,14 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-6">
-                                <select name="user.tipoDocumento" id="" class="form-select">
+                                <select name="tipoDocumento" id="" class="form-select">
                                     <option value="DNI">DNI</option>
                                     <option value="PASAPORTE">Pasaporte</option>
                                     <option value="PRECARIA">Precaria</option>
                                 </select>
                             </div>
                             <div class="col-6">
-                                <input type="text" class="form-control" name="user.nroDocumento">
+                                <input type="text" class="form-control" name="nroDocumento">
                             </div>
                         </div>
 
@@ -99,7 +99,7 @@
                         <label for="Contraseña" class="form-label">Nombre de usuario*</label>
                     </div>
                     <div class="col-6">
-                        <input type="text" class="form-control" name="user.sesion.username">
+                        <input type="text" class="form-control" name="sesion.username">
                     </div>
                 </div>
                 <div class="row mb-4">
@@ -107,7 +107,7 @@
                         <label for="Contraseña" class="form-label">Contraseña*</label>
                     </div>
                     <div class="col-6">
-                        <input type="password" class="form-control" name="user.sesion.password">
+                        <input type="password" class="form-control" name="sesion.password">
                     </div>
                 </div>
 
@@ -124,7 +124,7 @@
                         <label for="Fecha" class="form-label">Fecha de nacimiento</label>
                     </div>
                     <div class="col-6">
-                        <input type="date" class="form-control" name="user.fechaNacimiento">
+                        <input type="date" class="form-control" name="fechaNacimiento">
                     </div>
                 </div>
 
@@ -233,7 +233,7 @@
                                 </label>
                             </div>
                             <div class="col-9">
-                                <input type="text" class="form-control" name="user.contacto.celular">
+                                <input type="text" class="form-control" name="contacto.celular">
                             </div>
                         </div>
 
@@ -248,7 +248,7 @@
                                 </label>
                             </div>
                             <div class="col-9">
-                                <input type="text" class="form-control" placeholder="Ejemplo@gmail.com" name="user.contacto.mail">
+                                <input type="text" class="form-control" placeholder="Ejemplo@gmail.com" name="contacto.mail">
                             </div>
                         </div>
 
