--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -51,7 +51,7 @@
                       <div class="d-flex flex-column align-items-center text-center">
                         <img src="img/Avatar/avatar-gato.png" alt="Usuario" class="rounded-circle" width="150">
                           <div class="mt-3">
-                            <h4>Tom Hanks</h4>
+                            <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
                           </div>
 
                         <br>
@@ -72,7 +72,7 @@
 									<h6 class="mb-0">Nombre Completo</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
-									<input id="nombre" disabled type="text" class="form-control" value="Tom Hanks">
+									<input id="nombre" disabled type="text" class="form-control" value="{{usuario.nombre}} {{usuario.apellido}}">
 								</div>
 							</div>
 							<div class="row mb-3">
@@ -80,7 +80,7 @@
 									<h6 class="mb-0">Email</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
-									<input id="email" disabled type="text" class="form-control" value="tomHanks@gmail.com">
+									<input id="email" disabled type="text" class="form-control" value="{{usuario.contacto.mail}}">
 								</div>
 							</div>
 							<div class="row mb-3">
@@ -88,7 +88,7 @@
 									<h6 class="mb-0">Telefono</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
-									<input id="telefono" disabled type="text" class="form-control" value="(11) 999-9999">
+									<input id="telefono" disabled type="text" class="form-control" value="{{usuario.contacto.celular}}">
 								</div>
 							</div>
 							<div class="row mb-3">
@@ -96,7 +96,7 @@
 									<h6 class="mb-0">Direccion</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
-									<input id="direccion" disabled type="text" class="form-control" value="Calle Falsa 123, CABA">
+									<input id="direccion" disabled type="text" class="form-control" value="{{usuario.direccion.calle}} {{usuario.direccion.numero}}, {{usuario.direccion.ciudad.nombre}}, {{usuario.direccion.ciudad.provincia.nombre}}">
 								</div>
 							</div>
                             <div class="row">
@@ -118,21 +118,47 @@
                         <div class="col-sm-6 mb-3">
                             <div id="carousel" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
-                                  <div class="carousel-item active" data-bs-interval="3000">
-                                    <div class="card">
-                                        <img
-                                          src="./img/TomHanks/Pantufla.jpg!d"
-                                          class="card-img-top"
-                                          alt="..."
-                                          height="300"
-                                        />
-                                        <div class="card-body">
-                                          <h5 class="card-title">Pantufla</h5>
-                                          <p class="card-text">
-                                              Gata, Hembra, castrada, 3 años
-                                          </p>
-                                          <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
+                                    {{#each usuario.mascotas}}
+                                        <div class="carousel-item" data-bs-interval="3000">
+                                            <div class="card">
+                                                <img
+                                                        src="./img/TomHanks/Amelie.jpg"
+                                                        class="card-img-top"
+                                                        alt="..."
+                                                        height="300"
+                                                />
+                                                <div class="card-body">
+                                                    {{#if descripcionFisica}}
+                                                        <h5 class="card-title">{{nombre}}</h5>
+                                                        <p class="card-text">
+                                                            {{descripcionFisica}}
+                                                        </p>
+                                                    {{else}}
+                                                        <h5 class="card-title mb-4">{{nombre}}</h5>
+                                                        <br>
+                                                    {{/if}}
+                                                    <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
+                                                    <a href="../Dar-en-Adopcion/{{id}}" class="btn btn-secondary"  style="background-color: blueviolet;">Dar en Adopcion</a>
+                                                </div>
+                                            </div>
                                         </div>
+                                    {{/each}}
+
+                                  <div class="carousel-item active" data-bs-interval="3000">
+                                      <div class="card">
+                                          <img
+                                                  src="./img/TomHanks/Pantufla.jpg!d"
+                                                  class="card-img-top"
+                                                  alt="..."
+                                                  height="300"
+                                          />
+                                          <div class="card-body">
+                                              <h5 class="card-title">Pantufla</h5>
+                                              <p class="card-text">
+                                                  Gata, Hembra, castrada, 3 años
+                                              </p>
+                                              <a href="#!" class="btn btn-secondary"  style="background-color: blueviolet;">Editar</a>
+                                          </div>
                                       </div>
                                   </div>
                             
@@ -169,7 +195,7 @@
     
             </div>
         </div>
- 
+    </div>
 
 
 <!--========================================================== -->
@@ -187,6 +213,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="main.js"></script>
+    <!--<script src="./js/main.js"></script>-->
+    <script src="js/bootstrap.bundle.min.js "></script>
   </body>
 </html>
